Changelog for Touchdown
=======================

0.0.15 (unreleased)
-------------------

- Nothing changed yet.


0.0.14 (2015-05-28)
-------------------

- Add support for AWS CloudWatch Logs. In this initial release you can
  pre-create your log groups and manage the log retention period::

      aws.add_log_group(
          name="application.log",
          retention=3,
      )

- Add a new tail command. This can grab events from any touchdown managed
  CloudWatch log group. For the example above you could get the last 15m of
  logs with::

      touchdown tail application.log -s 15m

  And stream all new logs to that group with::

      touchdown tail application.log -f

- Add a new rollback command. This can restore a snapshot or restore to a point
  in time for any RDS database. For example to rewind your database ``foo`` to
  an hour ago you could::

      touchdown rollback foo 1h

- Both of these commands are written to be pluggable. For example in future you
  might be able to use the same ``tail`` command against a heroku app.

- Touchdown no longer depends on click.


0.0.13 (2015-05-22)
-------------------

- Avoid a case where SSHing into an ASG can actually log into a random instance
  in the cluster. It looks like ``DescribeInstances(InstanceIds=[])`` is
  interpreted as 'any instance'.

- Make sure when bringing up an ASG for the first time it's metadata is updated
  after at least one instance becomes healthy. This avoids cases where the ASG
  looks empty to later steps of the deployment.

- When syncing a folder to S3 use application/octet-stream if unable to guess
  mimetype.


0.0.12 (2015-05-14)
-------------------

- We now use botocore at least 0.107.0. This version changed the structure of
  its metadata folders. In order to continue overriding some values we've had
  to mirror that change, which breaks support for older versions.


0.0.11 (2015-05-14)
-------------------
